--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- * Bootstrap CSS -->
-    <!-- <link rel="stylesheet" href="/node_modules/bootstrap/css/bootstrap.min.css"> -->
-    <!-- <link rel="stylesheet" href="/opt/lampp/htdocs/projects/coffee-shop/node_modules/bootstrap/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="/node_modules/bootstrap/css/bootstrap.min.css">
 
     <!-- cdn -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
 
     <!-- Dropdown -->
 
