--- a/src/index.html
+++ b/src/index.html
@@ -38,8 +38,12 @@
     <!-- end of navbar -->
     
     <div class="content">
-      <!-- <h1> Welcome to Photography!</h1> -->
-      <h2> </h2>
+      <h1> Welcome to <span>Pictograph!</span></h1>
+      <h2> Our good services awaits you.</h2>
+      <div class="buttons">
+        <button>Explore Sample</button>
+        <button >Learn more</button>
+      </div>
     </div>
 
   </div>
