added home link in logo

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
   <!-- Dropdown -->
 
-  <title>BrewderHood</title>
+  <title>Pictrograph</title>
 
 
 </head>
@@ -26,9 +26,11 @@
   <div class="wrapper">
     <!-- start of navbar -->
     <nav class="navbar">
-      <img class="logo" src="./images/logo-trans.png" alt="logo">
+      <a href="index.html">
+        <img class="logo" src="./images/logo-trans.png" alt="logo of Pictograph">
+      </a>
       <ul>
-        <li><a href="#" class="active">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Contact</a></li>
