--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- * Bootstrap CSS -->
-  <link rel="stylesheet" href="/node_modules/bootstrap/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="/node_modules/bootstrap/css/bootstrap.min.css"> -->
   <!-- cdn -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
 
 
   <!-- Dropdown -->
@@ -30,7 +31,7 @@
         <img class="logo" src="./images/logo-trans.png" alt="logo of Pictograph">
       </a>
       <ul>
-        <li><a href="index.html" class="active">Home</a></li>
+        <li><a id="home" href="index.html" class="active">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Contact</a></li>
@@ -49,15 +50,6 @@
     </div>
 
   </div>
-
-
-
-
-
-
-
-
-
 
 
 
